--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fourth Day</title>
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Fourth Day</title>
+  <link rel="stylesheet" href="/screen.css">
+</head>
+
+<body>
+  <section class=box>
+    <section class=main>
+      <span class=big-text>Welcome to the McDonald's</span>
+      <span class=big-text>Official Web Site</span>
+      <img class=logo src="/mcdonaldslogo.png"
+        alt="Mc Image">
+      <section>
+        <span>Click on the</span>
+        <span class=bluetext>Golden Arches</span>
+        <span>to enter the main site!</span>
+      </section>
+    </section>
+  </section>
+</body>
+
 </html>
