--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-  <section class=box>
-    <section class=main>
-      <span class=big-text>Welcome to the McDonald's</span>
-      <span class=big-text>Official Web Site</span>
-      <img class=logo src="/mcdonaldslogo.png"
+  <section class="box">
+    <section class="main">
+      <span class="big-text">Welcome to the McDonald's</span>
+      <span class="big-text">Official Web Site</span>
+      <img class="logo" src="/mcdonaldslogo.png"
         alt="Mc Image">
       <section>
         <span>Click on the</span>
-        <span class=bluetext>Golden Arches</span>
+        <span class="bluetext">Golden Arches</span>
         <span>to enter the main site!</span>
       </section>
     </section>
